# finly-proj

./: .gitignore  AGENTS.md  ARCHITECTURE.md  DEPLOY.md  README.md  compose.yml  justfile  skills-lock.json
apps/agents/: .env.example  API.md  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
apps/agents/eval_results/FPT/TradingAgentsStrategy_logs/: full_states_log_2026-03-21.json
apps/agents/eval_results/ICLN/TradingAgentsStrategy_logs/: full_states_log_2026-03-21.json
apps/agents/src/finly_agents/: __init__.py  agent_client.py  agent_server.py  context.py  finly.db  intake.py  models.py  panel.py  server.py
apps/agents/src/finly_agents.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
apps/agents/src/tradingagents/: default_config.py
apps/agents/src/tradingagents/agents/analysts/: fundamentals_analyst.py  market_analyst.py  news_analyst.py  social_media_analyst.py
apps/agents/src/tradingagents/agents/managers/: research_manager.py  risk_manager.py
apps/agents/src/tradingagents/agents/researchers/: bear_researcher.py  bull_researcher.py
apps/agents/src/tradingagents/agents/risk_mgmt/: aggressive_debator.py  conservative_debator.py  neutral_debator.py
apps/agents/src/tradingagents/agents/trader/: trader.py
apps/agents/src/tradingagents/agents/utils/: agent_states.py  agent_utils.py  exa_tools.py  news_data_tools.py  technical_indicators_tools.py
apps/agents/src/tradingagents/dataflows/: exa_search.py  financial_datasets.py  interface.py  stockstats_utils.py  utils.py  y_finance.py  yfinance_news.py
apps/agents/src/tradingagents/dataflows/data_cache/: AAPL-YFin-data-2011-03-21-2026-03-21.csv  AMZN-YFin-data-2011-03-22-2026-03-22.csv  CVX-YFin-data-2011-03-21-2026-03-21.csv  HD-YFin-data-2011-03-22-2026-03-22.csv  ICLN-YFin-data-2011-03-21-2026-03-21.csv  JNJ-YFin-data-2011-03-22-2026-03-22.csv  JPM-YFin-data-2011-03-22-2026-03-22.csv  NVDA-YFin-data-2011-03-21-2026-03-21.csv  NVDA-YFin-data-2011-03-22-2026-03-22.csv  PG-YFin-data-2011-03-21-2026-03-21.csv  PG-YFin-data-2011-03-22-2026-03-22.csv  UNH-YFin-data-2011-03-22-2026-03-22.csv  XOM-YFin-data-2011-03-22-2026-03-22.csv
apps/agents/src/tradingagents/eval_results/AAPL/TradingAgentsStrategy_logs/: full_states_log_2026-03-21.json
apps/agents/src/tradingagents/graph/: propagation.py  setup.py  trading_graph.py
apps/agents/src/tradingagents/llm_clients/: factory.py  openai_client.py
apps/backend/: .env.example  API.md  Dockerfile  README.md  finly.db  main.py  pyproject.toml  railway.toml  requirements.txt
apps/backend/src/finly_backend/: __init__.py  agent_client.py  context.py  database.py  finly.db  heartbeat.py  intake.py  memory.py  mock_data.py  models.py  onboarding_chat.py  portfolio.py  profiles.py  server.py  voice.py
apps/backend/src/finly_backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: DESIGN.md  FRONTEND.md  (+5 more)
(+171 files in other folders)
