[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "finly-agents"
version = "0.1.0"
description = "Finly agent runtime for TradingAgents-style orchestration."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "backtrader>=1.9.78.123",
    "exa-py>=1.0.0",
    "fastapi>=0.116.1",
    "httpx>=0.27.0",
    "langchain-anthropic>=0.3.15",
    "langchain-core>=0.3.81",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=2.1.5",
    "langchain-openai>=0.3.23",
    "langgraph>=0.4.8",
    "pandas>=2.3.0",
    "parsel>=1.10.0",
    "python-dotenv>=1.0.0",
    "pytz>=2025.2",
    "rank-bm25>=0.2.2",
    "redis>=6.2.0",
    "requests>=2.32.4",
    "setuptools>=80.9.0",
    "stockstats>=0.6.5",
    "tqdm>=4.67.1",
    "typing-extensions>=4.14.0",
    "uvicorn>=0.35.0",
    "yfinance>=0.2.63",
]

[project.scripts]
finly-agent-server = "finly_agents.agent_server:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["tradingagents*", "finly_agents*"]
